--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/e02689b7f2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <header>
+      <div>
+        <a href="">
+          <i class="fas fa-bars"></i>
+        </a>
+        <h1><a href="">FIVE GUYS</a></h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">LOCATIONS</a></li>
+          <li><a href="">MENU</a></li>
+          <li><a href="">CONTACT</a></li>
+          <li><a href="">COVID-19</a></li>
+        </ul>
+        <div>
+          <a href=""><i class="fas fa-map-marker-alt"></i></a>
+        </div>
+      </nav>
+    </header>
     <script src="js/main.js"></script>
   </body>
 </html>
